# cangaroo

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  mainwindow.cpp
src/core/: Backend.cpp  Backend.h  CanMessage.cpp  CanTrace.cpp  LogModel.cpp
src/driver/: GenericCanSetupPage.cpp
src/driver/SocketCanDriver/: SocketCanInterface.cpp
src/parser/dbc/: DbcParser.cpp  DbcParser.h  DbcTokens.cpp  DbcTokens.h
src/window/TraceWindow/: BaseTraceViewModel.cpp  TraceWindow.cpp
